style fix - spacing

--- a/style.css
+++ b/style.css
@@ -5,19 +5,28 @@
   padding-bottom: 20px;
   padding-right: 30px;
   width: 100%;
-  background: #999999;
-}
-
-h1 {
-    text-align: center;
+  color: #228697;
+  font-weight: bold;
+  background: rgba(40, 160, 180, .7);
+  border-radius: 10px;
 }
 
 .pageText {
-  font-size: 26px;
+  font-size: 24px;
   font-weight: bolder;
   padding-top: 20px;
   padding-bottom: 10px;
   margin-bottom: 10px;
+}
+
+#inputCriteria {
+  margin-right: 40px;
+}
+
+p {
+  text-align: center;
+  font-weight: bolder;
+  font-size: 30px;
 }
 
 #inputBody {
@@ -25,12 +34,15 @@ h1 {
 }
 
 #chkBoxContainer {
-  width: 240px;
-  padding-left: 10px;
+  width: 260px;
+  padding-left: 0px;
 }
 
 #inputNum {
     width: 50%;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-left: 20px;
 }
 
 .chkBox {
@@ -40,8 +52,8 @@ h1 {
 
 #buttonContainer {
   padding: 10px;
+  margin-top: 30px;
   float: left;
-  clear: both;
 }
 
 .button {
@@ -52,6 +64,19 @@ h1 {
 #passwordHolder {
     position: relative;
     float: left;
-    clear: both;
+    width: 100%;
     left: 8px;
+    font-size: 26px;
+    padding-top: 10px;
+}
+
+#password {
+  width: 80%;
+  height: 130%;
+}
+
+@media screen and (max-width: 640px) {
+  #passwordHolder {
+    font-size: 12px;
+  }
 }
